# CMakeList.txt: proyecto de CMake para MULTIDIMENSIONES, incluya el origen y defina
# la lógica específica del proyecto aquí.
#
cmake_minimum_required (VERSION 3.8)

# Agregue un origen al ejecutable de este proyecto.
add_executable (MULTIDIMENSIONES "MULTIDIMENSIONES.cpp" "MULTIDIMENSIONES.h")

# TODO: Agregue pruebas y destinos de instalación si es necesario.
